--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+.app-wrapper {
+    display: grid;
+    margin: 0 auto;
+    width: 1280px;
+    grid-template-areas:
+            "app-header app-header"
+            "app-nav app-content"
+            "app-footer app-footer";
+    grid-template-rows: 150px 10fr;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 1vmin;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-header {
+    grid-area: app-header;
+    background-color: aqua;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-header img {
+    width: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app-nav {
+    grid-area: app-nav;
+    background-color: chartreuse;
 }
 
-.App-link {
-  color: #61dafb;
+.app-content {
+    display: grid;
+    grid-area: app-content;
+    background-color: coral;
+    grid-template-areas:
+        "content-background content-background"
+        "avatar profile-info"
+        "user-posts user-posts";
+    grid-template-rows: 250px repeat(2, 10fr);
+    grid-template-columns: 1fr 10fr;
+    grid-gap: 1vmin;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-background {
+    grid-area: content-background;
+    width: 100%;
+    /*height: 30%;*/
+    overflow: hidden;
+}
+
+.content-background img {
+    width: 100%;
+    /*height: 100%;*/
+    object-fit: cover;
+    object-position: center;
+
+}
+
+.avatar {
+    grid-area: avatar;
+    background-color: blue;
+}
+
+.profile-info {
+    grid-area: profile-info;
+    background-color: chartreuse;
+    padding: 1vmin;
+}
+
+.user-posts {
+    display: grid;
+    grid-area: user-posts;
+    background-color: aliceblue;
+    grid-template-areas:
+        "new-post"
+        "posts";
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 10fr;
+    grid-gap: 1vmin;
+}
+
+.new-post {
+    grid-area: new-post;
+    background-color: blueviolet;
+}
+
+.posts {
+    grid-area: posts;
+    background-color: brown;
+}
+
+.app-footer {
+    grid-area: app-footer;
+    background-color: darkmagenta;
 }
