--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -1,24 +1,24 @@
-.app-content {
+.content {
     display: grid;
-    grid-area: app-content;
+    grid-area: content;
     background-color: coral;
     grid-template-areas:
         "content-background content-background"
-        "avatar profile-info"
-        "user-posts user-posts";
+        "avatar profile"
+        "wall wall";
     grid-template-rows: 250px repeat(2, 10fr);
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 5fr 10fr;
     grid-gap: 1vmin;
 }
 
-.content-background {
+.background {
     grid-area: content-background;
     width: 100%;
     /*height: 30%;*/
     overflow: hidden;
 }
 
-.content-background img {
+.background img {
     width: 100%;
     /*height: 100%;*/
     object-fit: cover;
@@ -31,8 +31,8 @@
     background-color: blue;
 }
 
-.profile-info {
-    grid-area: profile-info;
+.profile {
+    grid-area: profile;
     background-color: chartreuse;
     padding: 1vmin;
 }
