--- a/src/components/Profile/Wall/Item/Item.module.css
+++ b/src/components/Profile/Wall/Item/Item.module.css
@@ -4,9 +4,10 @@
     background-color: aliceblue;
     grid-template-areas:
         "header"
-        "text";
+        "text"
+        "buttons";
     grid-template-rows: 2fr;
-    grid-template-columns: 10fr;
+    grid-template-columns: 12fr;
     grid-gap: 1vmin;
     margin-bottom: 5px;
     padding: 5px;
@@ -17,6 +18,39 @@
     color: brown;
     font-size: 16px;
     padding: 0 5px 0 5px;
+}
+
+.buttons {
+    display: grid;
+    grid-area: buttons;
+    grid-template-areas:
+        "settings like";
+    grid-template-rows: 1fr;
+    grid-template-columns: 11fr 1fr;
+}
+
+.like {
+    display: grid;
+    grid-area: like;
+    grid-template-areas:
+        "button counter";
+    grid-template-rows: 5fr;
+    grid-template-columns: 1fr 1fr;
+    text-align: right;
+    background-color: coral;
+}
+
+.counter {
+    grid-area: counter;
+    padding-right: 5px;
+}
+
+.settings {
+    grid-area: settings;
+}
+
+.settings button {
+    margin-right: 5px;
 }
 
 .header {
@@ -51,17 +85,20 @@
     grid-area: description;
     grid-template-areas:
         "creation editing";
-    grid-template-rows: repeat(1, 2fr);
-    grid-template-columns:  1fr 7fr;
+    grid-template-rows: 1fr;
+    grid-template-columns:  1fr 11fr;
     font-size: 10px;
 }
+
 .creation {
     grid-area: creation;
 }
+
 .editing {
     grid-area: editing;
 }
-.item img {
+
+.avatar img {
     width: 50px;
     border-radius: 50px;
 }
