--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,3 +10,9 @@
     grid-template-columns: 2fr 10fr;
     /*grid-gap: 1vmin;*/
 }
+
+.content {
+    display: grid;
+    grid-area: content;
+    background-color: coral;
+}
